src-java/testing/functional-tests/src/main/groovy/org/openkilda/functionaltests/error/SwitchIsInIllegalStateExpectedError.groovy
package org.openkilda.functionaltests.error

import org.springframework.http.HttpStatus

class SwitchIsInIllegalStateExpectedError extends AbstractExpectedError {
    final static HttpStatus statusCode = HttpStatus.BAD_REQUEST

    SwitchIsInIllegalStateExpectedError(String message) {
        super(statusCode, message, ~/Switch is in illegal state/)

    }
}
